lab1/Test/L1-A-3-9.output
Error Type A at Line 2
Error Type B at Line 7
Error Type A at Line 8
Error Type A at Line 10
Error Type A at Line 11
Error Type A at Line 12
Error Type B at Line 14
Error Type B at Line 14
