lab1/Test/L1-A-3-9.cmm
int zLmNti4ygexxqZNR [ 767677837 ] , mmDqCHJJ1lAwJba 
  [ 896302764 ] [ 1229914409 ] [ 2004741627 ] [ `1617443331 
  ] [ 1129402757 ] [ 1030034920 ] , h9seviwM1 


;
return float yq1MXifa7js ( int TKohLTrKw2utVkY [ 555701379 
  ] #) {
  struct rbOOV822HdaVERdHt {
  }IudPDTIIfblIyv @= Vk3MSjm9gFVvqkJnk ;
  struct naSpJeO7lP5g &OsMu9vW ;
  int @AK ;
}
( ;